<resources>
    <string name="app_name">Stick Delivery</string>

    <string name="action_settings">Settings</string>
    <string name="friebaseurl">https://logbasedev.firebaseio.com/</string>
    <string name="time">Time slot: </string>
    <string name="name">Name: </string>
    <string name="address">Address: </string>
    <string name="mobile">Mobile: </string>
    <string name="amount">Amount to collect: </string>
    <string name="goback">Go back</string>
    <string name="accept">Accept</string>
    <string name="pickup">PickUp</string>
    <string name="lastupdatesentat">Last update sent at</string>
    <string name="delivered">Delivered</string>
    <string name="viewroute">View Route</string>
    <string name="logglytoken">c6635d91-f545-4727-9f68-af1c7524ac6d</string>

</resources>
