<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/idlabel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textColor="#00b5ad">
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/time" />

        <TextView
            android:id="@+id/timelabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/name" />

        <TextView
            android:id="@+id/namelabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/address" />

        <TextView
            android:id="@+id/addresslabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/mobile" />

        <TextView
            android:id="@+id/phonelabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:autoLink="phone"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.35"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/amountlabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:text="Rs 0"
            android:textColor="#000000"/>
    </LinearLayout>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/itemslabel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:text="Items">
    </TextView>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/itemdetailslabel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="10dp"
        android:textColor="#000000">
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/pickupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/pickup"
            android:textColor="#ffffff"
            android:onClick="pickupclicked"/>

        <Button
            android:id="@+id/deliveredbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/delivered"
            android:textColor="#ffffff"
            android:onClick="delivered"/>

        <Button
            android:id="@+id/cancelbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/goback"
            android:textColor="#ffffff"
            android:onClick="cancelclicked"/>

        <Button
            android:id="@+id/viewroutegtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/viewroute"
            android:textColor="#ffffff"
            android:onClick="viewrouteclicked"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lastupdatelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastupdatesentat"
            android:id="@+id/msg"
            android:layout_above="@+id/clock"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NA"
            android:id="@+id/clock"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


</LinearLayout>